--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,15 @@
 {
     "extends": ["zyhou/presets/typescript"],
-    "rules": {}
+    "rules": {
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "ignoreRestSiblings": true,
+                "argsIgnorePattern": "^_",
+                "varsIgnorePattern": "_"
+            }
+        ],
+        "jest/expect-expect": "off",
+        "jest/no-disabled-tests": "off"
+    }
 }
