--- a/package.json
+++ b/package.json
@@ -2,24 +2,20 @@
     "name": "type-challenges-solution",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
     "scripts": {
-        "test:watch": "jest --watch",
-        "test": "jest",
+        "dev": "tsc --watch",
+        "build": "tsc",
         "lint": "eslint .",
-        "format": "prettier --write --check \"**/*.+(ts|ts|md|json)\""
+        "format": "prettier --write --check \"**/*.+(ts|md|json|yml)\""
     },
     "keywords": [],
     "author": "zyhou",
     "license": "MIT",
     "devDependencies": {
         "@type-challenges/utils": "^0.1.1",
-        "@types/jest": "^26.0.23",
         "eslint": "^7.26.0",
         "eslint-config-zyhou": "^0.0.14",
-        "jest": "^26.6.3",
         "prettier": "^2.3.0",
-        "ts-jest": "^26.5.6",
         "typescript": "^4.2.4"
     }
 }
