--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
         "forceConsistentCasingInFileNames": true,
         "esModuleInterop": true,
         "moduleResolution": "node",
-        "skipLibCheck": true
-    }
+        "skipLibCheck": true,
+        "outDir": "dist"
+    },
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
 }
